# python_practice

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint-test.yml
common/: config.py  database.py  utils.py
common/agents/: base_agent.py  memory.py  prompts.py  tool.py
common/cache/: cache.py  multi_level_cache.py  redis_client.py
common/core/: config.py  exceptions.py  logging.py
common/database/: base.py  repository.py  session.py
common/schemas/: envelope.py  pagination.py
common/tests/: conftest.py  test_common_smoke.py
common/utils/: datetime.py  hashing.py  id_generator.py
docker/: Dockerfile.base  docker-compose.yml
docs/: base-structure-plan.md  execution-plan.md  questions.md  structure.md  usage.md
scripts/: docker-up.sh  docker_up.py  lint-all.sh  run-all-tests.sh  setup-env.sh  setup.py  test_all.py
