[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-backend-ai-agent-coding-practice"
version = "0.1.0"
description = "25 Python machine coding projects for Backend + AI Agent roles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.2.0",
    "faiss-cpu>=1.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "types-redis",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "common/tests",
    "phase-01-fundamentals",
    "phase-02-backend-systems",
    "phase-03-ai-agents",
]
pythonpath = ["common"]

[tool.coverage.run]
source = ["common"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
